--- a/vasl_templates/webapp/static/css/tabs-scenario.css
+++ b/vasl_templates/webapp/static/css/tabs-scenario.css
@@ -8,6 +8,8 @@
 #panel-scenario .ui-selectmenu-button.scenario_theater { margin: -3px 0 0 0.25em ; width: 60px ; flex-grow: 0 ; }
 #panel-scenario input[name='SCENARIO_DATE'] { width: 6em ; flex-grow: 0 ; }
 
+#panel-scenario label[for='PLAYER_1'], label[for='PLAYER_2'] { margin-top: 2px ; }
+
 #panel-scenario label { font-weight: bold ; width: 5em ; }
 #panel-scenario label.header { font-weight: bold ; width: 3em ; text-align: center ; }
 #panel-scenario input { margin-bottom: 0.25em ; }
